log/build_2024-06-11_15-41-40/adhoc/stderr.log
  File "/home/greatshuhang/ros2_ws/install/adhoc/lib/python3.10/site-packages/adhoc/video_subscriber.py", line 25
    self.interval = 1 / self.frame rate
                                   ^^^^
SyntaxError: invalid syntax

